Issue #2106 - Follow-up: Aligned value names to unprefixed

--- a/devtools/client/debugger/new/styles.css
+++ b/devtools/client/debugger/new/styles.css
@@ -612,7 +612,7 @@ menuseparator {
 }
 
 .autocomplete .results * {
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -773,7 +773,7 @@ menuseparator {
 }
 .tree {
   -webkit-user-select: none;
-  -moz-user-select: none;
+  user-select: none;
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
@@ -820,7 +820,7 @@ html[dir="rtl"] .tree .node > div {
 }
 
 .sources-panel * {
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -834,7 +834,7 @@ html[dir="rtl"] .tree .node > div {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -916,7 +916,7 @@ html[dir="rtl"] .worker svg {
 
 .tree {
   -webkit-user-select: none;
-  -moz-user-select: none;
+  user-select: none;
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
@@ -966,7 +966,7 @@ html[dir="rtl"] .worker svg {
   right: 1px;
   opacity: 1;
   z-index: 100;
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -979,7 +979,7 @@ html[dir="rtl"] .source-footer .command-bar {
 }
 
 .source-footer .command-bar * {
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -1186,7 +1186,7 @@ html[dir="rtl"] .editor-mount {
   background-color: var(--theme-tab-toolbar-background);
   font-weight: lighter;
   z-index: 100;
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -1213,7 +1213,7 @@ html[dir="rtl"] .editor-mount {
   outline-width: 0;
 }
 .breakpoints-list * {
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -1396,7 +1396,7 @@ html .arrow.expanded svg {
 */
 
 .frames ul li * {
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -1449,7 +1449,7 @@ html .arrow.expanded svg {
   width: 100%;
 
   -webkit-user-select: none;
-  -moz-user-select: none;
+  user-select: none;
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
@@ -1475,7 +1475,7 @@ html .arrow.expanded svg {
 }
 
 .right-siderbar * {
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -1550,7 +1550,7 @@ html[dir="rtl"] .command-bar .stepOut {
   font-style: italic;
   text-align: center;
   padding: 0.5em;
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
@@ -1572,7 +1572,7 @@ span.pause-exceptions.all {
 }
 
 .source-header * {
-  -moz-user-select: none;
+  user-select: none;
   user-select: none;
 }
 
